--- a/tests/tagdemo/README
+++ b/tests/tagdemo/README
@@ -4,5 +4,5 @@ This directory contains a sample package that demonstrates the use of
 GNU Libtool's multi-language support through the use of configuration
 tags.  It requires GNU autoconf, automake and of course libtool.
 
-The demonstration generates a libraries using the same libtool script,
-which is then linked to a C++ program.
+The demonstration generates a library from C++ sources, which is then
+linked to a C++ program.
