--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* Makefile.am (INSTALLCHECK_ENVIRONMENT): Point LTDLINCL and
+	LIBLTDL to installed libltdl, so that it is being used by
+	the lt_dlexit test.
+
 2007-02-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* doc/libtool.texi (Install mode, libtool script contents):
