--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-02-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/static.at: Larger rewrite to make work on w32: Use three
+	different prefixes instead of three libdirs, so the moving of
+	the DLLs works as expected.  Adjust all code.  Since now
+	$libdirI/../bin is distinct from the directory of the installed
+	program, take care than on w32 PATH contains the needed bindirs,
+	in appropriate order.
+	Report by Charles Wilson.
+
 	* Makefile.am (INSTALLCHECK_ENVIRONMENT): Point LTDLINCL and
 	LIBLTDL to installed libltdl, so that it is being used by
 	the lt_dlexit test.
